<resources>
    <string name="app_name">Via Cep</string>
    <string name="buscar_cep">Buscar Cep</string>
    <string name="cep">Cep</string>
    <string name="logradouro">Logradouro</string>
    <string name="bairro">Bairro</string>
    <string name="regiao">Região</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="ddd">DDD</string>
</resources>